now using plugin factory

--- a/demos/fade-box.html
+++ b/demos/fade-box.html
@@ -6,7 +6,7 @@
     <title>Fade box</title>
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation.min.css" rel="stylesheet">
-    <link href="styles/fade-box.css" rel="stylesheet">
+    <link href="../dist/styles/fade-box.css" rel="stylesheet">
 
     <!-- Demo styles -->
     <style type="text/css">
@@ -19,7 +19,6 @@
         .fade-box {
             box-sizing: border-box;
             padding: 20px 15px;
-            height: 400px;
             max-width: 450px;
             width: 95%;
             background: #fff;
@@ -51,7 +50,8 @@
 </div>
 
 <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
-<script src="scripts/jquery.fade-box.js"></script>
+<script src="scripts/jquery.plugin-factory.js"></script>
+<script src="../dist/scripts/jquery.fade-box.js"></script>
 
 <!-- Demo scripts -->
 <script>
